--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,7 @@
     "@pinecone-database/pinecone": "^6.1.3",
     "pdf-parse": "^1.1.4",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "youtube-transcript-plus": "^1.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
